# tic-tac-toe-rust

./: Cargo.toml  README.md  TODO.md  main  memo.md
UI/: Cargo.toml
UI/src/: main.rs  ui.rs
domain/src/: domain.rs
gateway/: Cargo.toml
gateway/src/: gateway.rs
src/: main.rs  tictactoe.rs
usecase/: Cargo.toml
usecase/src/: usecase.rs
usecase/src/port/: usecase.rs
