[package]
name = "tic-tac-toe-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mry = "0.2.6"
tracing = "0.1.27"
tower-http = { version = "0.4.0", features = ["trace"] }
domain = { path = "./domain" }
usecase = { path = "./usecase" }
gateway = { path = "./gateway" }
ui = { path = "./ui" }

[workspace]
members = [
    "domain",
    "usecase",
    "gateway",
    "ui"
]
